@@ -147,6 +147,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 @item Updated compat.jl [Teika Kazura]
 
 @item Removed all old ChangeLog files [Christohper Bratusek]
+
+@item Make move-cursor.jl export all functions described in the doc [Christopher Bratusek]
 @end itemize
 @end itemize
 
