@@ -1,3 +1,6 @@
+2009-05-25  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/commands/move-cursor.jl: export all functions
+
 2009-05-16  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/prompt.jl: improved prompt.jl [Sergey I. Sharybi]
 
